--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -10,20 +10,20 @@
                 <p>Register to get ideas and view the latest masterpieces.</p>
 
                 <label for="username">Username:</label>
-                <input type="text" id="username" placeholder="ivan_00" name="">
+                <input type="text" id="username" placeholder="ivan_00" name="username">
 
                 <label for="password">Password:</label>
-                <input type="password" id="password" placeholder="*****" name="">
+                <input type="password" id="password" placeholder="*****" name="password">
 
                 <label for="re-password">Repeat password:</label>
-                <input type="password" id="re-password" placeholder="*****" name="">
+                <input type="password" id="re-password" placeholder="*****" name="repeatPassword">
 
                 <label for="address">Address:</label>
-                <input type="text" id="address" placeholder="2572 Orphan Road" name="">
+                <input type="text" id="address" placeholder="2572 Orphan Road" name="address">
 
                 <button class="register-btn">Register</button>
                 <div class="card-no-account">
-                    <p>Already have an account?<a href="#"> Sign in</p>
+                    <p>Already have an account?<a href="/auth/login"> Sign in</p>
                 </div>
 
             </form>
